--- a/config.json
+++ b/config.json
@@ -1,111 +1,111 @@
 {
   "bots": [
       {
-          "token": "",
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE",
           "isModerator": true
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       },
       {
-          "token": ""
+          "token": "MTM2MjEyNjcwODYwNTQ1NjU4Ng.G9FipD.kztCqWPSuytWXQxbmpR0R0jO13oSE9pn7l5ZEE"
       }
   ],
-  "logChannelId": "1361763854849151246",
+  "logChannelId": "1366026633831780483",
   "commandChannelId": "1361763854849151246",
-  "noSpamRoleId": "1361784616754745515",
-  "ownerLogChannelId": "1361763890010263673"
+  "noSpamRoleId": "1349720828941701130",
+  "ownerLogChannelId": "1366026633831780483"
 }
